[package]
name = "easycache"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruunao/easycache"
description = "Simple cache system"
keywords = ["cache", "memory"]
categories = ["cache"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
